Integrated everything except d3 to skills

--- a/firstscraper/d3.html
+++ b/firstscraper/d3.html
@@ -181,7 +181,7 @@ function createD3(filename, field) {
   }
 
 }
-createD3("skill_input1.tsv","skill");
+createD3("/Users/meerapatil/JoTA/firstscraper/output_folder/locMergeFile.tsv","location");
 
 
 </script>
