--- a/d3.html
+++ b/d3.html
@@ -119,7 +119,7 @@ function tableSkill(d) {
 function createD3(filename, field) {
 
   var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
+    width = 1500 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
   var x = d3.scale.ordinal()
@@ -156,10 +156,15 @@ function createD3(filename, field) {
       x.domain(data.map(function(d) { return d.skill; }));
       y.domain([0, d3.max(data, function(d) { return d.count; })]);
     }
-    svg.append("g")
+     svg.append("g")
         .attr("class", "x axis")
         .attr("transform", "translate(0," + height + ")")
-        .call(xAxis);
+        .call(xAxis)
+        .selectAll("text")  
+            .style("text-anchor", "end")
+            .attr("dx", "-.8em")
+            .attr("dy", ".15em")
+            .attr("transform", "rotate(-65)" );
 
     svg.append("g")
         .attr("class", "y axis")
@@ -190,7 +195,7 @@ function createD3(filename, field) {
   }
 
 }
-createD3("first_input.tsv","location");
+createD3("finaltest.tsv","location");
 
 
 </script>
