--- a/firstscraper/helloworld.html
+++ b/firstscraper/helloworld.html
@@ -65,7 +65,8 @@
     <td><a href='https://www.indeed.com//pagead/clk?mo=r&ad=-6NYlbfkN0CfxdSZxi7Rx8BLlwAEOfBj7FcnQKTi9NtYFLEqaZrMBE7eCxkz6v2DZp5vQce83rxdSibr_AO_oq_JyFawGBlN9ErVwsL17HyR60jtLSj8tU2ZFzRHx1vLmpQrjtKc3fRNUPENLH06AzK01wFrL-RE-mTQQiOQ2R4KYmWi8OE7-2hd3athV8PWcLWra1ZfOEGICO5bEhhh_uKi5GmNzd5y-LQtUmXrg7R-DIC9N4q8ge5KMYdsUX-KDgqsxFRkBD8QDfyBVE4cUX8MjsR9lqGiV3z23yvaF77fpcMcWa3-fcXYZIoLlYMpdhiqrh4wj_oibHgqhy7o3rMmdG9TgrpO3HeMnCb5woNOB7QGTklZdUA3cC-tAWAHM1PW7PuuxCUjdNZ0Ak5p89tSwT7NSDIwtN35NPlu-RvaDPtXJ112wQ==&p=1&sk=36968f8dc1b483d4&fvj=0'>Link</a></td></tr></tbody>
   </table>
 </div>
-  <button style ="float:right;margin:50"><a href=“index.html”>Back</a></button><p> &nbsp;&nbsp;&nbsp;&nbsp;</p>
+    <p align="left" >
+      <button class="btn btn-default" style ="position:relative;left:50%;" ><a href=index.html>Back</a></button></p>
 
 </body>
 </html>
